# HSE-Course

module-1/homework/Allocator/: .gitignore  CMakeLists.txt  run.sh
module-1/homework/Allocator/src/allocator/: allocator.h
module-1/homework/Allocator/src/list/: list.h
module-1/homework/BigInteger/: tests.cpp  unit_tests.cpp
module-1/homework/Geometry/: CMakeLists.txt  tests.cpp
module-1/homework/Geometry/hierarchy/: circle.cpp  circle.h  ellipse.cpp  ellipse.h  geometry_utils.cpp  geometry_utils.h  line.cpp  line.h  point.cpp  point.h  polygon.cpp  polygon.h  rectangle.cpp  rectangle.h  shape.h  square.cpp  square.h  triangle.cpp  triangle.h
module-1/homework/List/: CMakeLists.txt  list.cpp  list.h  unit_tests.cpp
module-1/homework/Optional/: .gitignore  optional.h  run.sh
module-1/homework/SharedPointer/: run.sh
module-1/homework/SharedPointer/src/control/: CMakeLists.txt  control.h
module-1/homework/SharedPointer/src/shared_ptr/: CMakeLists.txt  shared_ptr.h
module-1/homework/TypeList/: CMakeLists.txt
module-1/homework/TypeList/typelist/: append.h  erase.h  eraseall.h  indexof.h  length.h  noduplicates.h  replace.h  typeat.h  typelist.h
module-1/homework/TypeTraits/: run.sh
module-1/homework/TypeTraits/type_traits/: is_copy_constructible.h  is_nothrow_move_constructible.h  move_if_noexcept.h  utility.h
